@@ -311,8 +311,10 @@ class RevelationApplet(object):
 		defaults = {
 			"autolock"		: True,
 			"autolock_timeout"	: 15,
+			"chain_username"	: False,
 			"file"			: "",
 			"menuaction"		: "show",
+			"show_passwords"	: True
 		}
 
 		for key, value in defaults.items():
@@ -382,7 +384,7 @@ class RevelationApplet(object):
 
 		secrets = [ field.value for field in e.fields if field.datatype == entry.DATATYPE_PASSWORD and field.value != "" ]
 
-		if len(secrets) > 0 and e.has_field(entry.UsernameField) and e[entry.UsernameField] != "":
+		if self.config.get("chain_username") == True and len(secrets) > 0 and e.has_field(entry.UsernameField) and e[entry.UsernameField] != "":
 			secrets.insert(0, e[entry.UsernameField])
 
 		self.clipboard.set(secrets)
@@ -422,7 +424,7 @@ class RevelationApplet(object):
 				if field.datatype == entry.DATATYPE_PASSWORD and field.value != "":
 					chain.append(field.value)
 
-			if len(chain) > 0 and e.has_field(entry.UsernameField) == True and e[entry.UsernameField] != "" and "%" + entry.UsernameField.symbol not in command:
+			if self.config.get("chain_username") == True and len(chain) > 0 and e.has_field(entry.UsernameField) == True and e[entry.UsernameField] != "" and "%" + entry.UsernameField.symbol not in command:
 				chain.insert(0, e[entry.UsernameField])
 
 			self.clipboard.set(chain)
@@ -495,7 +497,7 @@ class RevelationApplet(object):
 		popup = dialog.Popup()
 		popup.set_title(e.name)
 
-		view = ui.EntryView()
+		view = ui.EntryView(self.config)
 		view.set_border_width(12)
 		view.display_entry(e)
 
@@ -717,6 +719,7 @@ class Preferences(dialog.Utility):
 		self.page_general = self.notebook.create_page("General")
 		self.__init_section_file(self.page_general)
 		self.__init_section_menuaction(self.page_general)
+		self.__init_section_misc(self.page_general)
 
 		self.page_goto = self.notebook.create_page("Goto Commands")
 		self.__init_section_gotocmd(self.page_goto)
@@ -804,11 +807,31 @@ class Preferences(dialog.Utility):
 		self.section_menuaction.append_widget(None, self.radio_goto)
 
 		# radio-button for copy username/password
-		self.radio_copy = ui.RadioButton(self.radio_show, "Copy username and password to clipboard")
+		self.radio_copy = ui.RadioButton(self.radio_show, "Copy password to clipboard")
 		ui.config_bind(self.config, "menuaction", self.radio_copy, "copy")
 
 		self.tooltips.set_tip(self.radio_copy, "Copy the username and password to the clipboard as a clipboard \"chain\"")
 		self.section_menuaction.append_widget(None, self.radio_copy)
+
+
+	def __init_section_misc(self, page):
+		"Sets up the misc section"
+
+		self.section_misc = page.add_section("Miscellaneous")
+
+		# check-button for username
+		self.check_chain_username = ui.CheckButton("Also copy username when copying password")
+		ui.config_bind(self.config, "chain_username", self.check_chain_username)
+
+		self.tooltips.set_tip(self.check_chain_username, "When the password is copied to clipboard, put the username before the password as a clipboard \"chain\"")
+		self.section_misc.append_widget(None, self.check_chain_username)
+
+		# show passwords checkbutton
+		self.check_show_passwords = ui.CheckButton("Show passwords and other secrets")
+		ui.config_bind(self.config, "show_passwords", self.check_show_passwords)
+
+		self.tooltips.set_tip(self.check_show_passwords, "Display passwords and other secrets, such as PIN codes (otherwise, hide with ******)")
+		self.section_misc.append_widget(None, self.check_show_passwords)
 
 
 	def run(self):
